# music

./: .gitignore  Accidental.hs  BeatExpansion.hs  Draw.hs  DrawCairo.hs  Examples.hs  ExamplesGtk.hs  GUI.hs  Glyph.hs  GuiGtk.hs  Lyrics.hs  Music.hs  Numbered.hs  NumberedDraw.hs  NumberedTable.hs  Pitch.hs  PitchDoremi.hs  README.md  Rect.hs  Table.hs  TableLayout.hs  Voice.hs  bashrc  build  enter  language-object.scm  main.scm  music.cabal  native.c  native.scm  plist-to-alist.scm  run  stack.yaml
language/: explode.scm
language/gui/: gtk.scm
